--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
-    <title>React App</title>
+    <title>In-N-Out - On/Off ramping systems</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
